# databricks-finops-accelerator

./: .bundleignore  .gitignore  README.md  commands.ps1  databricks.yml  pyproject.toml
config/: tagging_rules.yml  thresholds.yml
docs/: architecture.md  business_value.md  dashboard_guide.md  navigation_guide.md
resources/: finops_job.yml
src/databricks_finops/: __init__.py  config.py  costs.py  health.py  main.py  optimization.py  preflight.py  reliability.py  run_logging.py  scoring.py  spark_utils.py  summary.py  tagging.py  utilization.py  views.py
src/databricks_finops/sql/: accelerator_summary.sql  compute_utilization_placeholder.sql  compute_utilization_summary.sql  daily_cost_fallback.sql  daily_cost_list_prices.sql  job_reliability_placeholder.sql  job_reliability_summary.sql  optimization_candidates.sql  tagging_quality_summary.sql  workload_cost_summary.sql
src/databricks_finops/sql/views/: vw_architecture_review_candidates.sql  vw_attribution_quality.sql  vw_compute_sizing_signals.sql  vw_cost_trend_daily.sql  vw_executive_summary.sql  vw_failed_jobs.sql  vw_most_expensive_workloads.sql  vw_optimization_backlog.sql  vw_system_table_coverage.sql  vw_tagging_quality.sql  vw_wasteful_workloads.sql
tests/: test_main.py  test_pipeline.py
